--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -4,13 +4,13 @@
 
 @font-face {
   font-family: roboto;
-  src: url('fonts/Roboto-Regular.ttf');
+  src: url('https://assets.timgrowney.com/fonts/Roboto-Regular.ttf');
   font-weight: normal
 }
 
 @font-face {
   font-family: roboto;
-  src: url('fonts/Roboto-Bold.ttf');
+  src: url('https://assets.timgrowney.com/fonts/Roboto-Bold.ttf');
   font-weight: bold
 }
 
